--- a/src/blocks/countdown/editor.scss
+++ b/src/blocks/countdown/editor.scss
@@ -1,135 +1,2 @@
-.wp-block-themeisle-blocks-countdown {
-	.wp-block-themeisle-blocks-countdown-date-picker {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		.wp-block-themeisle-blocks-countdown-date-picker__container {
-			width: 300px;
-		}
+@import 'style';
 
-	}
-	.wp-block-themeisle-blocks-countdown-container {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		.wp-block-themeisle-blocks-countdown-display {
-			display: flex;
-			flex-direction: row;
-			gap: 12px;
-			.wp-block-themeisle-blocks-countdown-display-component {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				flex-direction: column;
-				width: max-content;
-				border: unset;
-				border-radius: 10px;
-				border-width: 2px;
-
-				.wp-block-themeisle-blocks-countdown-display-component_value {
-					font-size: 2rem;
-				}
-
-				.wp-block-themeisle-blocks-countdown-display-component_label {
-					font-size: 1rem;
-					min-height: 2rem;
-				}
-			}
-		}
-	}
-
-	&.is-style-simple {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					height: 80px;
-					width: 80px;
-				}
-			}
-		}
-	}
-
-	&.is-style-square {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-radius: 0px;
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-
-	&.is-style-card {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-radius: 25% 10%;
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-
-	&.is-style-pocket {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-radius: 10% 10% 40% 40%;
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-
-	&.is-style-round {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-radius: 10%;
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-
-	&.is-style-circle {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-radius: 100%;
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-
-	&.is-style-custom {
-		.wp-block-themeisle-blocks-countdown-container {
-			.wp-block-themeisle-blocks-countdown-display {
-				.wp-block-themeisle-blocks-countdown-display-component:not([name="separator"]) {
-					border-style: solid;
-					height: 123px;
-					width: 123px;
-				}
-			}
-		}
-	}
-}
-
-// This modify the look of the DateTimePicker
-// file: http://localhost:8889/wp-content/themes/neve/assets/css/gutenberg-editor-style.min.css?ver=2.11.6
-.editor-styles-wrapper .wp-block table td, .editor-styles-wrapper .wp-block table th {
-	padding: unset;
-}
