Make the text centered

--- a/src/blocks/countdown/style.scss
+++ b/src/blocks/countdown/style.scss
@@ -32,11 +32,13 @@
 				.wp-block-themeisle-blocks-countdown-display-component_value {
 					font-size: 1.4rem;
 					line-height: 1.2;
+					text-align: center;
 				}
 
 				.wp-block-themeisle-blocks-countdown-display-component_label {
 					font-size: 0.6rem;
 					min-height: 1rem;
+					text-align: center;
 				}
 
 				&[name="separator"] {
