--- a/src/blocks/contact-form/style.scss
+++ b/src/blocks/contact-form/style.scss
@@ -3,8 +3,15 @@
 		.wp-block-themeisle-blocks-business-contact-form__container__content {
 			.wp-block-themeisle-blocks-contact-form-item {
 				.wp-block-themeisle-blocks-contact-form-item-label {
+					font-size: 1.1em;
+					width: 100%;
 					.wp-block-themeisle-blocks-contact-form-item-label__input {
 						width: 100%;
+						padding: 10px 10px;
+						border-radius: 3px;
+						color: black;
+						border: 2px solid black;
+						outline: none;
 					}
 
 					.is-required {
@@ -19,6 +26,12 @@
 					}
 				}
 			}
+		}
+
+		.wp-block-themeisle-blocks-contact-form__container__submit {
+			font-size: 1em;
+			padding: 0.7rem 1.2rem;
+			border-radius: 5%;
 		}
 	}
 }
