--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -55,5 +55,17 @@
 			font-size: 1em;
 			padding: 0.7rem 1.2rem;
 		}
+
+	}
+	.wp-block-themeisle-blocks-form__container__placeholder {
+		display: flex;
+		align-items: baseline;
+		justify-content: space-around;
+		align-content: center;
+		flex-wrap: wrap;
+
+		p {
+			margin-right: 5px;
+		}
 	}
 }
