--- a/src/blocks/form/editor.scss
+++ b/src/blocks/form/editor.scss
@@ -1,1 +1,14 @@
-@import 'style.scss'
+@import 'style.scss';
+
+.wp-block-themeisle-blocks-form {
+	.wp-block-themeisle-blocks-form__container {
+		.wp-block-themeisle-blocks-business-form__container__content {
+			.wp-block-themeisle-blocks-form-input {
+				.wp-block-themeisle-blocks-form-input-label__input {
+					padding: 10px 5px;
+					margin-bottom: 0;
+				}
+			}
+		}
+	}
+}
