--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -45,11 +45,11 @@
 	}
 
 	.wp-block-themeisle-blocks-form-server-msg {
-		width: 100%;
 		text-align: left;
 		padding: 1rem;
 		font-size: 1.2rem;
 		border-radius: 10%;
+		margin-left: 10px;
 
 		&.success {
 			color: green;
@@ -59,4 +59,26 @@
 			color: red;
 		}
 	}
+
+	.has-submit-msg {
+		display: flex;
+		align-items: baseline;
+		flex-direction: row;
+	}
+
+	.loading {
+		animation: blink 3s ease-in-out infinite both;
+	}
+
+	@keyframes blink {
+		0%,
+		50%,
+		100% {
+		  opacity: 1;
+		}
+		25%,
+		75% {
+		  opacity: 0.5;
+		}
+	  }
 }
