Eliminate render from backend & globals

--- a/src/blocks/form/captcha/editor.scss
+++ b/src/blocks/form/captcha/editor.scss
@@ -1,6 +1,9 @@
 
 .wp-block-themeisle-blocks-form-captcha {
 
+	border: 2px dashed rgba(94, 94, 94, 0.733);
+	padding: 1rem;
+
 	.wp-block-themeisle-blocks-form_placeholder {
 		display: flex;
 		flex-direction: row;
