Add consent checkbox and verification on form when `submit-subscribe` action is enabled

--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -40,6 +40,16 @@
 			}
 		}
 
+		.wp-block-themeisle-blocks-form-consent {
+			label {
+				margin-left: 10px;
+			}
+
+			input {
+				transform: scale(1.5);
+			}
+		}
+
 		.wp-block-button {
 			margin-top: 1.5em;
 		}
