--- a/src/blocks/form/editor.scss
+++ b/src/blocks/form/editor.scss
@@ -14,9 +14,14 @@
 		display: flex;
 		flex-direction: row;
 		margin: 10px;
+
 		.wp-block-themeisle-blocks-form_placeholder__button {
 			border: 1.5px solid black;
 		}
+	}
+
+	.components-placeholder__fieldset {
+		flex-direction: column;
 	}
 
 	.components-placeholder__label > svg {
