--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,17 @@
         }
     }
 }
+
+.wp-block-themeisle-blocks-woo-comparison {
+    .nv-ct-layout-row {
+        tbody {
+            tr {
+                td {
+                    &:first-child {
+                        border-left: 1px solid var(--borderColor);
+                    }
+                }
+            }
+        }
+    }
+}
