--- a/src/blocks/business-hours/editor.scss
+++ b/src/blocks/business-hours/editor.scss
@@ -1,8 +1,8 @@
 @import 'style';
 
 .wp-block-themeisle-blocks-business-hours {
-    .wp-block-themeisle-blocks-business-hours__container {
-		.wp-block-themeisle-blocks-business-hours__container__content {
+    .ti_bh__container {
+		.ti_bh__content {
 			.block-editor-block-list__block {
 					margin: 0;
 			}
