--- a/src/blocks/business-hours/style.scss
+++ b/src/blocks/business-hours/style.scss
@@ -9,13 +9,13 @@
 		background-color: #2a2730;
 		border-radius: 10px;
 
-		.ti_bh__container {
-			.ti_bh__title {
+		.ti-bh__container {
+			.ti-bh__title {
 				text-align: center;
 				color: #fff;
 			}
 
-			.ti_bh__content {
+			.ti-bh__content {
 				.wp-block-themeisle-blocks-business-hours-item {
 					background-color: #fff;
 
@@ -40,18 +40,18 @@
 		}
 	}
 
-	.ti_bh__container {
+	.ti-bh__container {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 
-		.ti_bh__title {
+		.ti-bh__title {
 			position: relative;
 			font-size: 24px;
 			padding: 20px 40px;
 		}
 
-		.ti_bh__content {
+		.ti-bh__content {
 			display: flex;
 			flex-direction: column;
 
@@ -64,11 +64,11 @@
 				padding-left: 40px;
 				padding-right: 40px;
 
-				.ti_bhi__label {
+				.ti-bhi__label {
 					width: 50%;
 				}
 			
-				.ti_bhi__time {
+				.ti-bhi__time {
 					width: 50%;
 				}
 			}
