--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -1,9 +1,9 @@
 .wp-block-themeisle-blocks-form {
-	.ti-form__container {
+	.otter-form__container {
 		.wp-block-themeisle-blocks-form-input {
 			display: flex;
 			flex-direction: column;
-			.ti-form-input-label {
+			.otter-form-input-label {
 				width: 100%;
 				font-weight: bold;
 
@@ -15,14 +15,14 @@
 				}
 			}
 
-			.ti-form-input {
+			.otter-form-input {
 				width: 100%;
 				margin-bottom: 1.5em;
 			}
 		}
 
 		.wp-block-themeisle-blocks-form-textarea {
-			.ti-form-textarea-label {
+			.otter-form-textarea-label {
 				width: 100%;
 				font-weight: bold;
 
@@ -33,14 +33,14 @@
 				}
 			}
 
-			.ti-form-textarea-input {
+			.otter-form-textarea-input {
 				width: 100%;
 				height: 200px;
 				margin-bottom: 1.5em;
 			}
 		}
 
-		.ti-form-consent {
+		.otter-form-consent {
 			label {
 				margin-left: 10px;
 			}
@@ -56,7 +56,7 @@
 
 	}
 
-	.ti-form-server-response {
+	.otter-form-server-response {
 		text-align: left;
 		padding: 1rem;
 		font-size: 1.2rem;
