--- a/src/blocks/sharing-icons/editor.scss
+++ b/src/blocks/sharing-icons/editor.scss
@@ -3,13 +3,13 @@
 .wp-block-themeisle-toolbar {
 	&.is-active {
 
-		.wp-block-themeisle-toolbar-icon {
+		.otter-toolbar-icon {
 			color: #fff;
 			background: #555d66;
 		}
 	}
 
-	.wp-block-themeisle-toolbar-icon {
+	.otter-toolbar-icon {
 		width: 20px;
 		height: 20px;
 		padding: 5px;
