--- a/src/components/control-panel-control/editor.scss
+++ b/src/components/control-panel-control/editor.scss
@@ -1,4 +1,4 @@
-.wp-block-themeisle-blocks-control-panel-control {
+.otter-control-panel-control {
 	padding: 10px 0;
 
 	.components-base-control__title {
@@ -40,7 +40,7 @@
 	}
 }
 
-.wp-block-themeisle-popover-settings {
+.otter-popover-settings {
 	padding: 10px;
 	min-width: 300px;
 	overflow: hidden;
