--- a/src/editor.scss
+++ b/src/editor.scss
@@ -4,7 +4,7 @@
 	}
 }
 
-.wp-block-themeisle-blocks-masonry {
+.otter-masonry {
     .blocks-gallery-grid {
         .blocks-gallery-item {
             img {
