--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-.wp-block-themeisle-blocks-masonry {
+.otter-masonry {
     .blocks-gallery-grid {
         .blocks-gallery-item {
             img {
