--- a/src/blocks/business-hours/editor.scss
+++ b/src/blocks/business-hours/editor.scss
@@ -1,8 +1,8 @@
 @import 'style';
 
 .wp-block-themeisle-blocks-business-hours {
-    .ti-bh__container {
-		.ti-bh__content {
+    .otter-bh__container {
+		.otter-bh__content {
 			.block-editor-block-list__block {
 					margin: 0;
 			}
