--- a/src/blocks/popup/editor.scss
+++ b/src/blocks/popup/editor.scss
@@ -1,8 +1,7 @@
 @import 'style';
 
 .wp-block-themeisle-blocks-popup {
-
-	.wp-block-themeisle-blocks-popup__modal_wrap {
+	.otter-popup__modal_wrap {
 		z-index: 2;
 	}
 }
