--- a/src/blocks/section/editor.scss
+++ b/src/blocks/section/editor.scss
@@ -424,6 +424,7 @@
 		justify-content: unset;
 		height: max-content;
 		min-height: unset;
+		margin-bottom: 10px;
 
 		.components-placeholder__label {
 			display: none;
@@ -432,24 +433,5 @@
 		.components-placeholder__instructions {
 			display: none;
 		}
-	}
-
-	.or {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		color: #747d86;
-		margin: 3px 0px;
-
-		span {
-			text-transform: uppercase;
-		}
-	}
-
-	.template-library {
-		width: 100%;
-		display: flex;
-		justify-content: center;
 	}
 }
